2010-09-22  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Follow up to task #6737: Updating Changelog.txt

2010-08-30  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #8500: Custom CSS classes not rendered for field type "Show some text"

2010-06-07  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Fixed bug #8086: userFunc user_powermailOnCurrentPage with a small bug
	
2010-05-11  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Fixed bug #7744: CSV Export without header
	* Feature #7737: Enable CSV Export via Cronjob
	* Feature #7745: Set a fix filename for cronjob export files

2010-05-02  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #7257: mimecheck fails in general with finfo_open/finfo_file
	* Feature #6502: Extension config "Activate tab dividers" has no effects
	* Task #7593: Remove conditions hich checks for TYPO3 version < 4.2.0
	* Fixed bug #5969: New Content Element Wizard in 4.3

2010-04-01  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #7079: redirect-field in answerpage is not checked for space characters
	* Fixed bug #6516: "fe_group" field config missing in powermail tca.php
	
2010-03-09  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #6550: Mimecheck for docx in Powermail Version 1.5.1
	* Fixed bug #6679: javascript inclusion (type=3131) not xhtml valid (Thanks to Robert Heel)

2010-03-08  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Task #6737: Updating Changelog.txt

2010-03-06  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Cleanup #6722: Little bit cleaning of the mandatory class
	* Fixed bug #6436: /validation/* JS gets served with content type text/html
	* Fixed bug #6721: Hook PM_SubmitBeforeMarkerHook couldn't be used from more extensions

2010-02-16  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #6428: hook_submit_beforeEmails called twice
	* Fixed bug #5732: date2cal Integration: Path is incorrect on some systems